--- a/fito/app/src/main/res/layout/content_main.xml
+++ b/fito/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/abc_vector_test"
+    android:id="@+id/layout1">
 
     <TextView
         android:id="@+id/textView1"
@@ -16,7 +18,7 @@
         android:text="@string/texto1"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView1"
         app:layout_constraintVertical_bias="1.0" />
